k8s/docs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spawnery-docs
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
